# catastrophic

./: .gitignore  README.md  compose.yaml
.github/workflows/: ecr.yml
client/: Dockerfile  nginx.conf
client/app/: layout.tsx  page.tsx
client/components/HomePage/: HomePage.module.css  HomePage.tsx
client/functions/: fetcher.ts
infra/: .terraform.lock.hcl  acm.tf  alb.tf  auto_scaling_group.tf  ec2.tf  iam.tf  launch_template.tf  listener.tf  route53.tf  sg.tf  target_group.tf  variables.tf
infra/scripts/: user_data
scripts/: build_and_push  refresh_compose
server/: Cargo.toml  Dockerfile
server/src/: handlers.rs  main.rs  responses.rs
writeup/: README.md
